--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.83.1",
     "react-native-device-info": "^15.0.1",
     "react-native-fs": "^2.20.0",
+    "react-native-get-random-values": "^2.0.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-qrcode-svg": "^6.3.21",
     "react-native-safe-area-context": "^5.6.2",
