--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -25,10 +25,8 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
-# Use this property to specify which architecture you want to build.
-# You can also override it from the CLI using
-# ./gradlew <task> -PreactNativeArchitectures=x86_64
-reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
+# Build for physical phone (ARM). Use x86_64 for emulator.
+reactNativeArchitectures=arm64-v8a
 
 # Use this property to enable support to the new architecture.
 # This will allow you to use TurboModules and the Fabric render in
@@ -38,12 +36,10 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
-newArchEnabled=false
-
 hermesEnabled=true
 
 # Enable Gradle build cache
 org.gradle.caching=true
 
-# Enable configuration cache
+# Disable configuration cache (RN libs run node during config, which breaks cache)
 org.gradle.configuration-cache=false
